--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -99,7 +99,7 @@ Resources:
     Properties:
       Parameters:
         JobsTable: !Ref JobsTable
-      TemplateURL: update-db/udpate-db-cf.yml
+      TemplateURL: update-db/update-db-cf.yml
 
   GetFiles:
     Type: AWS::CloudFormation::Stack
