--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -95,6 +95,11 @@ components:
       default: false
       type: boolean
 
+    include_area_map:
+      description: Include the area map in the product package
+      default: false
+      type: boolean
+
     include_look_vectors:
       description: Include the look vector theta and phi files in the product package
       default: false
