--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -95,8 +95,8 @@ components:
       default: false
       type: boolean
 
-    include_area_map:
-      description: Include the area map in the product package
+    include_scattering_area:
+      description: Include the scattering area in the product package
       default: false
       type: boolean
 
