--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -66,20 +66,20 @@ components:
       example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
 
     granule_s2_esa:
-      description: The name of the Sentinel-2 SLC granule to process
+      description: The name of the Sentinel-2 granule to process (ESA naming convention)
       type: string
-      pattern: "^S2[AB]_.*"
+      pattern: "^S2[AB]_*"
       minLength: 60
       maxLength: 60
       example: S2B_MSIL2A_20200903T151809_N0214_R068_T22WEB_20200903T194353
 
     granule_s2_cog:
-      description: The name of the Sentinel-2 SLC granule to process
+      description: The name of the Sentinel-2 granule to process (Sentinel-2 Cloud-Optimized GeoTIFFs naming convention)
       type: string
-      pattern: "^S2[AB]_.*"
+      pattern: "^S2[AB]_*"
       minLength: 24
       maxLength: 24
-      example: S2B_MSIL2A_20200903T151809_N0214_R068_T22WEB_20200903T194353
+      example: S2B_22WEB_20200903_0_L2A
 
     resolution:
       description: Desired output pixel spacing in meters
