--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -74,7 +74,7 @@ components:
       example: S2B_MSIL2A_20200903T151809_N0214_R068_T22WEB_20200903T194353
 
     granule_s2_cog:
-      description: The name of the Sentinel-2 granule to process (Sentinel-2 Cloud-Optimized GeoTIFFs naming convention)
+      description: The name of the Sentinel-2 granule to process (Sentinel-2 Cloud-Optimized GeoTIFFs on AWS naming convention)
       type: string
       pattern: "^S2[AB]_*"
       minLength: 24
