support landsat collection 2 for autorift

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -32,6 +32,7 @@ components:
           - $ref: "#/components/schemas/granule_slc"
           - $ref: "#/components/schemas/granule_s2_esa"
           - $ref: "#/components/schemas/granule_s2_cog"
+          - $ref: "#/components/schemas/granule_lc2"
 
     insar_granules:
       type: array
@@ -80,6 +81,14 @@ components:
       minLength: 24
       maxLength: 24
       example: S2B_22WEB_20200903_0_L2A
+
+    granule_lc2:
+      description: The name of the Landsat Collection 2 granule to process
+      type: string
+      pattern: "^LC*"
+      minLength: 40
+      maxLength: 40
+      example: LC08_L1GT_118112_20210107_20210107_02_RT
 
     resolution:
       description: Desired output pixel spacing in meters
