restrict to landsat *8*, collection 2

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -83,9 +83,9 @@ components:
       example: S2B_22WEB_20200903_0_L2A
 
     granule_lc2:
-      description: The name of the Landsat Collection 2 granule to process
+      description: The name of the Landsat 8 Collection 2 granule to process
       type: string
-      pattern: "^LC*"
+      pattern: "^LC08*"
       minLength: 40
       maxLength: 40
       example: LC08_L1GT_118112_20210107_20210107_02_RT
