add hypen to lc2 regex

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -85,7 +85,7 @@ components:
     granule_lc2:
       description: The name of the Landsat 8 Collection 2 granule to process
       type: string
-      pattern: "^LC08*"
+      pattern: "^LC08_*"
       minLength: 40
       maxLength: 40
       example: LC08_L1GT_118112_20210107_20210107_02_RT
