--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -23,6 +23,7 @@ components:
         {% endif %}
       {% endfor %}
     {% endfor %}
+
     autorift_granules:
       type: array
       minItems: 2
@@ -30,9 +31,9 @@ components:
       items:
         anyOf:
           - $ref: "#/components/schemas/granule_slc"
-          - $ref: "#/components/schemas/granule_s2_esa"
-          - $ref: "#/components/schemas/granule_s2_cog"
-          - $ref: "#/components/schemas/granule_lc2"
+          - $ref: "#/components/schemas/granule_s2_l1c_esa"
+          - $ref: "#/components/schemas/granule_s2_l1c_earth_search"
+          - $ref: "#/components/schemas/granule_lc08"
 
     insar_granules:
       type: array
@@ -66,23 +67,23 @@ components:
       maxLength: 67
       example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
 
-    granule_s2_esa:
+    granule_s2_l1c_esa:
       description: The name of the Sentinel-2 granule to process (ESA naming convention)
       type: string
-      pattern: "^S2[AB]_*"
+      pattern: "^S2[AB]_MSIL1C_*"
       minLength: 60
       maxLength: 60
-      example: S2B_MSIL2A_20200903T151809_N0214_R068_T22WEB_20200903T194353
+      example: S2A_MSIL1C_20200627T150921_N0209_R025_T22WEB_20200627T170912
 
-    granule_s2_cog:
-      description: The name of the Sentinel-2 granule to process (Sentinel-2 Cloud-Optimized GeoTIFFs on AWS naming convention)
+    granule_s2_l1c_earth_search:
+      description: The name of the Sentinel-2 granule to process (Element 84 Earth Search naming convention)
       type: string
-      pattern: "^S2[AB]_*"
+      pattern: "^S2[AB]_*_L1C"
       minLength: 24
       maxLength: 24
-      example: S2B_22WEB_20200903_0_L2A
+      example: S2A_22WEB_20200627_0_L1C
 
-    granule_lc2:
+    granule_lc08:
       description: The name of the Landsat 8 Collection 2 granule to process
       type: string
       pattern: "^LC08_*"
