--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -54,7 +54,7 @@ components:
     granule_grdh:
       description: The name of the Sentinel-1 GRDH granule to process
       type: string
-      pattern: "^S1[AB]_IW_GRDH_*"
+      pattern: "^S1[AB]_IW_GRDH_"
       minLength: 67
       maxLength: 67
       example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
@@ -62,7 +62,7 @@ components:
     granule_slc:
       description: The name of the Sentinel-1 SLC granule to process
       type: string
-      pattern: "^S1[AB]_IW_SLC__*"
+      pattern: "^S1[AB]_IW_SLC__"
       minLength: 67
       maxLength: 67
       example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
@@ -70,7 +70,7 @@ components:
     granule_s2_l1c_esa:
       description: The name of the Sentinel-2 granule to process (ESA naming convention)
       type: string
-      pattern: "^S2[AB]_MSIL1C_*"
+      pattern: "^S2[AB]_MSIL1C_"
       minLength: 60
       maxLength: 60
       example: S2A_MSIL1C_20200627T150921_N0209_R025_T22WEB_20200627T170912
@@ -78,7 +78,7 @@ components:
     granule_s2_l1c_earth_search:
       description: The name of the Sentinel-2 granule to process (Element 84 Earth Search naming convention)
       type: string
-      pattern: "^S2[AB]_*_L1C"
+      pattern: "^S2[AB]_.*_L1C"
       minLength: 24
       maxLength: 24
       example: S2A_22WEB_20200627_0_L1C
@@ -86,7 +86,7 @@ components:
     granule_lc08:
       description: The name of the Landsat 8 Collection 2 granule to process
       type: string
-      pattern: "^LC08_*"
+      pattern: "^LC08_"
       minLength: 40
       maxLength: 40
       example: LC08_L1GT_118112_20210107_20210107_02_RT
