--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -136,6 +136,11 @@ components:
       default: false
       type: boolean
 
+    include_rgb:
+      description: Include a false-color RGB decomposition in the product package for dual-pol granules (ignored for single-pol granules)
+      default: false
+      type: boolean
+
     include_look_vectors:
       description: Include the look vector theta and phi files in the product package
       default: false
