--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -141,6 +141,7 @@
         "files.$": "$.results.get_files.files",
         "browse_images.$": "$.results.get_files.browse_images",
         "thumbnail_images.$": "$.results.get_files.thumbnail_images",
+        "logs.$": "$.results.get_files.logs",
         "expiration_time.$": "$.results.get_files.expiration_time"
       },
       "Retry": [
