--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -98,6 +98,7 @@ Resources:
                 Resource:
                  - !GetAtt UpdateDB.Outputs.LambdaArn
                  - !GetAtt GetFiles.Outputs.LambdaArn
+                 - !GetAtt UploadLog.Outputs.LambdaArn
 
   UpdateDB:
     Type: AWS::CloudFormation::Stack
