--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -160,7 +160,9 @@
       "Resource": "${UpdateDBLambdaArn}",
       "Parameters": {
         "job_id.$": "$.job_id",
-        "status_code": "FAILED"
+        "status_code": "FAILED",
+        "logs.$": "$.results.get_files.logs",
+        "expiration_time.$": "$.results.get_files.expiration_time"
       },
       "Retry": [
         {
