add option to rtc that allows use of copernicus

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -97,6 +97,13 @@ components:
       enum:
         - 30.0
 
+    dem_name:
+      description: Name of DEM dataset to use for processing
+      type: string
+      enum:
+        - copernicus
+        - legacy
+
     radiometry:
       description: Backscatter coefficient normalization, either by ground area (sigma0) or illuminated area projected into the look direction (gamma0)
       type: string
