--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -98,7 +98,7 @@ components:
         - 30.0
 
     dem_name:
-      description: Name of DEM dataset to use for processing
+      description: Name of the DEM to use for processing. `copernicus` will use the Copernicus GLO-30 Public DEM, while `legacy` will use the DEM with the best coverage from ASF's legacy SRTM/NED datasets.
       type: string
       enum:
         - copernicus
