job_parameters.granules is a string, not a list

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -29,7 +29,7 @@
       "Type": "Choice",
       "Choices": [
         {
-          "Variable": "$.job_parameters.granules.0",
+          "Variable": "$.job_parameters.granules",
           "StringMatches": "S1*",
           "Next": "SET_HIGH_MEMORY"
         }
