--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -143,6 +143,11 @@ components:
       default: false
       type: boolean
 
+    apply_water_mask:
+        description: Apply a water mask to the DEM used in processing
+        default: false
+        type: boolean
+
     include_rgb:
       description: Include a false-color RGB decomposition in the product package for dual-pol granules (ignored for single-pol granules)
       default: false
