--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -144,6 +144,7 @@ components:
       type: boolean
 
     apply_water_mask:
+        # TODO: revisit description
         description: Apply a water mask to the DEM used in processing
         default: false
         type: boolean
