support landsat 8 'ORI-only' scenes for autorift jobs

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -86,7 +86,7 @@ components:
     granule_lc08:
       description: The name of the Landsat 8 Collection 2 granule to process
       type: string
-      pattern: "^LC08_"
+      pattern: "^L[CO]08_"
       minLength: 40
       maxLength: 40
       example: LC08_L1GT_118112_20210107_20210107_02_RT
