expose include_wrapped_phase parameter for insar jobs

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -153,6 +153,11 @@ components:
       default: false
       type: boolean
 
+    include_wrapped_phase:
+      description: Include the wrapped phase GeoTIFF in the product package
+      default: false
+      type: boolean
+
     looks:
       description: Number of looks to take in range and azimuth
       type: string
