--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -54,7 +54,7 @@ components:
     granule_grdh:
       description: The name of the Sentinel-1 GRDH granule to process
       type: string
-      pattern: "^S1[AB]_IW_GRDH_"
+      pattern: "^S1[AB]_IW_GRDH_1S[SD][VH]"
       minLength: 67
       maxLength: 67
       example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
@@ -62,7 +62,7 @@ components:
     granule_slc:
       description: The name of the Sentinel-1 SLC granule to process
       type: string
-      pattern: "^S1[AB]_IW_SLC__"
+      pattern: "^S1[AB]_IW_SLC__1S[SD][VH]"
       minLength: 67
       maxLength: 67
       example: S1A_IW_SLC__1SSV_20150621T120220_20150621T120232_006471_008934_72D8
