--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -3,7 +3,7 @@ components:
     job_type:
       description: Type of process to run this job.
       type: string
-      example: RTC_GAMMA
+      example: {{ job_types.values() | map(attribute='api_job_type') | first }}
       enum:
         {% for job_spec in job_types.values() %}
         - {{ job_spec['api_job_type'] }}
