--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -11,25 +11,35 @@ components:
     job_parameters:
       anyOf:
         {% for job_type in job_types %}
-        - $ref: "#/components/schemas/{{ job_type }}"
+        - $ref: "#/components/schemas/{{ job_type }}JobParameters"
         {% endfor %}
+
+    {% for job_type, job_spec in job_types.items() %}
+    {{ job_type }}JobParameters:
+      allOf:
+        - $ref: "#/components/schemas/{{ job_type }}"
+        - type: object
+          required:
+            - granules
+          properties:
+            granules:
+              $ref: "{{ job_spec['parameters']['granules']['api_schema_location'] }}"
+    {% endfor %}
+
 
     {% for job_type, job_spec in job_types.items() %}
     {{ job_type }}:
       description: Parameters for running {{job_spec['api_job_type']}} jobs
       type: object
-      required:
-      {% for parameter in job_spec['required_parameters'] %}
-        - {{ parameter }}
-      {% endfor %}
-      additionalProperties: false
+    {% if job_spec['parameters'].__len__() > 2 %}
       properties:
       {% for parameter, parameter_spec in job_spec['parameters'].items() %}
-        {% if 'api_schema_location' in parameter_spec %}
+        {% if 'api_schema_location' in parameter_spec and parameter != 'granules'%}
         {{ parameter }}:
           $ref: "{{ parameter_spec['api_schema_location'] }}"
         {% endif %}
       {% endfor %}
+    {% endif %}
     {% endfor %}
 
     autorift_granules:
