--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -40,6 +40,7 @@ Resources:
         {% endfor %}
       ContainerProperties:
         Image: !Sub "{{ job_spec['image'] }}:${ImageTag}"
+        Vcpus: 0
         Memory: 30000
         JobRoleArn: !Ref TaskRoleArn
         Command:
