--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -143,7 +143,7 @@ components:
       type: boolean
 
     include_inc_map:
-      description: Include the local and ellipsoidal incidence angle maps in the product package
+      description: Include the incidence angle map(s) in the product package
       default: false
       type: boolean
 
