--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -1,13 +1,5 @@
 components:
   schemas:
-    job_type:
-      description: Type of process to run this job.
-      type: string
-      example: {{ job_types.values() | map(attribute='api_job_type') | first }}
-      enum:
-        {% for job_spec in job_types.values() %}
-        - {{ job_spec['api_job_type'] }}
-        {% endfor %}
     job_parameters:
       anyOf:
         {% for job_type in job_types %}
@@ -142,7 +134,7 @@ components:
       type: boolean
 
     include_inc_map:
-      description: Include the incidence angle map(s) in the product package
+      description: Include the incidence angle map in the product package
       default: false
       type: boolean
 
