--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -24,6 +24,13 @@ Parameters:
   TaskRoleArn:
     Type: String
 
+  AutoriftNamingScheme:
+    Type: String
+    Default: ITS_LIVE_OD
+    AllowedValues:
+      - ITS_LIVE_OD
+      - ITS_LIVE_PROD
+
 Outputs:
   StepFunctionArn:
     Value: !Ref StepFunction
