cherry-pick: Merge pull request #546 from ASFHyP3/apply-water-mask
Add apply water mask

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -167,6 +167,11 @@ components:
       default: false
       type: boolean
 
+    apply_water_mask:
+      description: Sets pixels over coastal and large inland waterbodies as invalid for phase unwrapping.
+      default: false
+      type: boolean
+
     looks:
       description: Number of looks to take in range and azimuth
       type: string
