prototype changing upload_log to be an activity

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -113,7 +113,7 @@
     {% endfor %}
     "UPLOAD_LOG":{
       "Type": "Task",
-      "Resource": "${UploadLogLambdaArn}",
+      "Resource": "${UploadLogActivityArn}",
       "Parameters": {
         "prefix.$": "$.job_id",
         "log_group": "/aws/batch/job",
