--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -70,7 +70,7 @@ Resources:
         {% endfor %}
         UpdateDBLambdaArn: !GetAtt UpdateDB.Outputs.LambdaArn
         GetFilesLambdaArn: !GetAtt GetFiles.Outputs.LambdaArn
-        UploadLogLambdaArn: !GetAtt UploadLog.Outputs.LambdaArn
+        UploadLogActivityArn: !GetAtt UploadLog.Outputs.UploadLogActivity
 
   StepFunctionRole:
     Type: AWS::IAM::Role
