update step function to upload log only on failed jobs

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -91,7 +91,7 @@
         }
       },
       "ResultPath": "$.results.processing_results",
-      "Next": "UPLOAD_LOG",
+      "Next": "GET_FILES",
       "Retry": [
         {
           "ErrorEquals": [
