use correct format for ResourceRequirements entries in step function

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -46,8 +46,8 @@
       "Result": {
         "ResourceRequirements": [
           {
-            "type": "MEMORY",
-            "value": 7900
+            "Type": "MEMORY",
+            "Value": "7900"
           }
         ]
       },
@@ -59,8 +59,8 @@
       "Result": {
         "ResourceRequirements": [
           {
-            "type": "MEMORY",
-            "value": 10500
+            "Type": "MEMORY",
+            "Value": "10500"
           }
         ]
       },
