--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -49,6 +49,8 @@ Resources:
         Image: !Sub "{{ job_spec['image'] }}:${ImageTag}"
         JobRoleArn: !Ref TaskRoleArn
         ResourceRequirements:
+          - Type: VCPU
+            Value: "1"
           - Type: MEMORY
             Value: "31672"
         Command:
