add optional PermissionsBoundaryPolicyArn stack parameter to apply to all IAM roles

--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -31,6 +31,13 @@ Parameters:
       - ITS_LIVE_OD
       - ITS_LIVE_PROD
 
+  PermissionsBoundaryPolicyArn:
+    Type: String
+    Default: ""
+
+Conditions:
+  UsePermissionsBoundary: !Not [ !Equals [ !Ref PermissionsBoundaryPolicyArn, "" ] ]
+
 Outputs:
   StepFunctionArn:
     Value: !Ref StepFunction
