Accept both include_los_displacement and include_displacement_maps

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -197,3 +197,8 @@ components:
       description: Include a GeoTIFF in the product package containing displacement values along the Line-Of-Sight (LOS)
       default: false
       type: boolean
+
+    displacement_maps:
+      description: Include GeoTIFFs in the product package containing vertical (VERT) and Line-Of-Sight (LOS) displacements
+      default: false
+      type: boolean
