--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -199,6 +199,6 @@ components:
       type: boolean
 
     displacement_maps:
-      description: Include GeoTIFFs in the product package containing vertical (VERT) and Line-Of-Sight (LOS) displacements
+      description: Include displacement maps (line-of-sight and vertical) in the product package
       default: false
       type: boolean
