scema match option

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -198,7 +198,7 @@ components:
       default: false
       type: boolean
 
-    displacement_maps:
+    include_displacement_maps:
       description: Include displacement maps (line-of-sight and vertical) in the product package
       default: false
       type: boolean
