Add parameter file option for autorift

--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -31,6 +31,10 @@ Parameters:
       - ITS_LIVE_OD
       - ITS_LIVE_PROD
 
+  AutoriftParameterFile:
+  Type: String
+
+
 Outputs:
   StepFunctionArn:
     Value: !Ref StepFunction
