Add autorift image as a paramater

--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -24,6 +24,9 @@ Parameters:
   TaskRoleArn:
     Type: String
 
+  AutoriftImage:
+    Type: String
+
   AutoriftNamingScheme:
     Type: String
     Default: ITS_LIVE_OD
