--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -65,6 +65,12 @@ components:
       items:
         $ref: "#/components/schemas/granule_slc"
 
+    isce_scenes:
+      type: array
+      minItems: 1
+      items:
+        $ref: "#/components/schemas/granule_slc"
+
     rtc_granules:
       type: array
       minItems: 1
