update templating to define job parameter specs in job_types
Moves job types file definitions into job_spec folder
Move api job parameter definitions into job_spec folder

--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -50,7 +50,7 @@ Resources:
       Type: container
       Parameters:
         {% for k, v in job_spec['parameters'].items() %}
-        {{ k }}: {{ v['default'] }}
+        {{ k }}: {{ v.get('default') or v['api_schema'].get('default') }}
         {% endfor %}
       ContainerProperties:
         Image: !Sub "{{ job_spec['image'] }}:${ImageTag}"
