--- a/apps/api/src/hyp3_api/job_validation_map.yml.j2
+++ b/apps/api/src/hyp3_api/job_validation_map.yml.j2
@@ -1,5 +1,5 @@
-{% for job_spec in job_types.values() %}
-{{ job_spec['api_job_type'] }}: {% if not job_spec['validators'] %}[]{% endif %}
+{% for job_type, job_spec in job_types.items() %}
+{{ job_type }}: {% if not job_spec['validators'] %}[]{% endif %}
 
   {% for validator in job_spec['validators'] %}
   - {{ validator }}
