snake case the job definition

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -87,11 +87,11 @@
       "Default": "JOB_FAILED"
     },
     {% for job_type, job_spec in job_types.items() %}
-    "{{ snake_to_pascal_case(job_type) }}": {
+    "{{ job_type }}": {
       "Type": "Task",
       "Resource": "arn:aws:states:::batch:submitJob.sync",
       "Parameters": {
-        "JobDefinition": "{{ '${'+ job_type + '}' }}",
+        "JobDefinition": "{{ '${'+ snake_to_camel_case(job_type) + '}' }}",
         "JobName.$": "$.job_id",
         "JobQueue": "${JobQueueArn}",
         "Parameters.$": "$.job_parameters",
